--- a/3d.html
+++ b/3d.html
@@ -11,14 +11,20 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "3d.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "3d.css"], "outOfDate":[]};
 </script>
   
   <title>3d</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4110669070"/>
-  <link rel="stylesheet" type="text/css" href="css/3d.css?crc=334818863" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/3d.css?crc=303207643" id="pagesheet"/>
+  <!-- Other scripts -->
+  <script type="text/javascript">
+   var __adobewebfontsappname__ = "muse";
+</script>
+  <!-- JS includes -->
+  <script src="https://webfonts.creativecloud.com/kaffeesatz:n1:default.js" type="text/javascript"></script>
     <!--HTML Widget code-->
   
 
@@ -45,40 +51,142 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="clearfix colelem" id="pu1060"><!-- group -->
-    <div class="grpelem" id="u1060"><!-- custom html -->
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/UrqhBhY12Qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+   <div class="clearfix colelem" id="pu2101-3"><!-- group -->
     <div class="clearfix grpelem" id="u2101-3"><!-- content -->
      <p>&nbsp;</p>
     </div>
+    <div class="PamphletWidget clearfix grpelem" id="pamphletu4065" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- none box -->
+     <div class="popup_anchor" id="u4079popup">
+      <div class="ContainerGroup clearfix" id="u4079" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- stack box -->
+       <div class="Container clearfix grpelem" id="u4145" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="grpelem" id="u4239"><!-- custom html -->
+         <iframe width="684" height="487" src="https://www.youtube.com/embed/GfgT8rVZpQw" frameborder="0" allowfullscreen></iframe>
+        </div>
+       </div>
+       <div class="Container invi clearfix grpelem" id="u4162" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="grpelem" id="u4244"><!-- custom html -->
+         <iframe width="684" height="487" src="https://www.youtube.com/embed/w3ww9cOKk6w" frameborder="0" allowfullscreen></iframe>
+        </div>
+       </div>
+       <div class="Container invi clearfix grpelem" id="u4170" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="grpelem" id="u4249"><!-- custom html -->
+         <iframe width="684" height="487" src="https://www.youtube.com/embed/OpQp70pyhWM" frameborder="0" allowfullscreen></iframe>
+        </div>
+       </div>
+       <div class="Container invi clearfix grpelem" id="u4178" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="grpelem" id="u4264"><!-- custom html -->
+         <iframe width="684" height="487" src="https://www.youtube.com/embed/sHdkFXrxk-A" frameborder="0" allowfullscreen></iframe>
+        </div>
+       </div>
+       <div class="Container invi clearfix grpelem" id="u4186" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="grpelem" id="u4308"><!-- custom html -->
+         <iframe width="684" height="487" src="https://www.youtube.com/embed/1NbcWPbqvwY" frameborder="0" allowfullscreen></iframe>
+        </div>
+       </div>
+       <div class="Container invi clearfix grpelem" id="u4080" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="grpelem" id="u4081"><!-- custom html -->
+         <iframe width="684" height="487" src="https://www.youtube.com/embed/UrqhBhY12Qc" frameborder="0" allowfullscreen></iframe>
+        </div>
+       </div>
+       <div class="Container invi shadow clearfix grpelem" id="u4084" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="rounded-corners grpelem" id="u4085"><!-- custom html -->
+         <iframe width="684" height="487" src="https://www.youtube.com/embed/nwzLi5UHGUc" frameborder="0" allowfullscreen></iframe>
+        </div>
+       </div>
+       <div class="Container invi clearfix grpelem" id="u4082" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="grpelem" id="u4083"><!-- custom html -->
+         <iframe width="684" height="487" src="https://www.youtube.com/embed/vN2jgsxUdw8" frameborder="0" allowfullscreen></iframe>
+        </div>
+       </div>
+       <div class="Container invi shadow grpelem" id="u4194" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- simple frame --></div>
+       <div class="Container invi shadow grpelem" id="u4202" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- simple frame --></div>
+       <div class="Container invi shadow grpelem" id="u4210" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- simple frame --></div>
+       <div class="Container invi shadow grpelem" id="u4218" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- simple frame --></div>
+      </div>
+     </div>
+     <div class="ThumbGroup clearfix grpelem" id="u4068" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- none box -->
+      <div class="popup_anchor" id="u4155popup">
+       <div class="Thumb popup_element clearfix" id="u4155" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="clearfix grpelem" id="u4273-4"><!-- content -->
+         <p>Hackathon XR</p>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor" id="u4166popup">
+       <div class="Thumb popup_element clearfix" id="u4166" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="clearfix grpelem" id="u4281-4"><!-- content -->
+         <p>Vuforia Project</p>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor" id="u4174popup">
+       <div class="Thumb popup_element clearfix" id="u4174" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="clearfix grpelem" id="u4288-4"><!-- content -->
+         <p>Squirrel Animation</p>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor" id="u4182popup">
+       <div class="Thumb popup_element clearfix" id="u4182" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="clearfix grpelem" id="u4291-4"><!-- content -->
+         <p>Kiyohime 1</p>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor" id="u4190popup">
+       <div class="Thumb popup_element clearfix" id="u4190" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="clearfix grpelem" id="u4294-4"><!-- content -->
+         <p>Kiyohime 2</p>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor" id="u4069popup">
+       <div class="Thumb popup_element clearfix" id="u4069" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="clearfix grpelem" id="u4070-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
+         <p>Bartender</p>
+        </div>
+        <div class="clearfix grpelem" id="u4142-3"><!-- content -->
+         <p>&nbsp;</p>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor" id="u4071popup">
+       <div class="Thumb popup_element clearfix" id="u4071" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="clearfix grpelem" id="u4072-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
+         <p>Plant</p>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor" id="u4073popup">
+       <div class="Thumb popup_element clearfix" id="u4073" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- group -->
+        <div class="clearfix grpelem" id="u4074-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
+         <p>Ball Bounce</p>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor" id="u4198popup">
+       <div class="Thumb popup_element" id="u4198" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- simple frame --></div>
+      </div>
+      <div class="popup_anchor" id="u4206popup">
+       <div class="Thumb popup_element" id="u4206" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- simple frame --></div>
+      </div>
+      <div class="popup_anchor" id="u4214popup">
+       <div class="Thumb popup_element" id="u4214" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- simple frame --></div>
+      </div>
+      <div class="popup_anchor" id="u4222popup">
+       <div class="Thumb popup_element" id="u4222" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- simple frame --></div>
+      </div>
+     </div>
+    </div>
+    <div class="clearfix grpelem" id="u4139-3"><!-- content -->
+     <p>&nbsp;</p>
+    </div>
    </div>
-   <div class="colelem" id="u1064"><!-- custom html -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/nwzLi5UHGUc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
-   <div class="colelem" id="u1072"><!-- custom html -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/vN2jgsxUdw8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
-   <div class="colelem" id="u1076"><!-- custom html -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/GfgT8rVZpQw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
-   <div class="colelem" id="u1080"><!-- custom html -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/w3ww9cOKk6w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
-   <div class="colelem" id="u1084"><!-- custom html -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/HC0RAsnCkbI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
-   <div class="colelem" id="u1088"><!-- custom html -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/OpQp70pyhWM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
-   <div class="colelem" id="u1136"><!-- custom html -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/sHdkFXrxk-A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
-   <div class="verticalspacer" data-offset-top="3224" data-content-above-spacer="3224" data-content-below-spacer="471" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="605" data-content-above-spacer="605" data-content-below-spacer="119" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
@@ -94,7 +202,7 @@ var suppressMissingFileError = false
 k[1]:null,k=k&&k[2]?k[2]:null;switch(k.toLowerCase()){case "css":i=i.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");g.className+=" "+i;i=a(d(g,"color"));k=a(d(g,"backgroundColor"));i!=0||k!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof b[l]&&(i!=b[l]>>>24||k!=(b[l]&16777215))&&Muse.assets.outOfDate.push(l)):j++;g.className="version";break;case "js":j++;break;default:throw Error("Unsupported file type: "+k);}}c?c().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 g.parentNode.removeChild(g);if(Muse.assets.outOfDate.length||Muse.assets.required.length)g="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",f&&Muse.assets.outOfDate.length&&(g+="\nOut of date: "+Muse.assets.outOfDate.join(",")),f&&Muse.assets.required.length&&(g+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(g+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(g)):alert(g)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){f(!0)},5E3):f()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch"],function(c){var $ = c;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","webpro","musewpslideshow","jquery.museoverlay","touchswipe"],function(c){var $ = c;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
@@ -102,6 +210,7 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
+Muse.Utils.initWidget('#pamphletu4065', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:1000,transitionStyle:'fading',transitionDuration:1000,hideAllContentsFirst:false,triggersOnTop:true,shuffle:false,enableSwipe:true,resumeAutoplay:false,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); });/* #pamphletu4065 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
@@ -109,7 +218,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=128606099" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=3936894949" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
   
   <!--HTML Widget code-->
   
