--- a/animation-studio.html
+++ b/animation-studio.html
@@ -18,9 +18,39 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4110669070"/>
-  <link rel="stylesheet" type="text/css" href="css/animation-studio.css?crc=4129628908" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/animation-studio.css?crc=4026722991" id="pagesheet"/>
     <!--HTML Widget code-->
   
+
+<style>
+p.disco { color: #FFFFFF; -webkit-transform: rotateX(25deg) rotateY(20deg) rotateZ(-3deg); transform: rotateX(25deg) rotateY(20deg) rotateZ(-3deg); -webkit-animation: anim 3s; -webkit-animation-timing-function: linear; -webkit-animation-iteration-count: infinite; animation: anim 3s; animation-timing-function: linear; animation-iteration-count: infinite; }
+@-webkit-keyframes anim {
+    0%{text-shadow:-6px 4px 0px #FF0000;}
+    10% {text-shadow:4px -6px 0px #38B549;}
+    20% {text-shadow:-9px 4px 0px #0074BD;}
+    30% {text-shadow:4px -6px 0px #FFFF00;}
+    40% {text-shadow:-8px 4px 0px #F7921E;}
+    50% {text-shadow:4px 5px 0px #662D91;}
+    60% {text-shadow:-6px 4px 0px #A67B51;}
+    70% {text-shadow:4px 7px 0px #FF00FF;}
+    80% {text-shadow:-9px -4px 0px #66FFE8;}
+    90% {text-shadow:4px -6px 0px #2F3291;}
+    100% {text-shadow:-9px 4px 0px #00FFFF;}
+} 
+
+@keyframes anim {
+    0%{text-shadow:-6px 4px 0px #FF0000;}
+    10% {text-shadow:4px -6px 0px #38B549;}
+    20% {text-shadow:-9px 4px 0px #0074BD;}
+    30% {text-shadow:4px -6px 0px #FFFF00;}
+    40% {text-shadow:-8px 4px 0px #F7921E;}
+    50% {text-shadow:4px 5px 0px #662D91;}
+    60% {text-shadow:-6px 4px 0px #A67B51;}
+    70% {text-shadow:4px 7px 0px #FF00FF;}
+    80% {text-shadow:-9px -4px 0px #66FFE8;}
+    90% {text-shadow:4px -6px 0px #2F3291;}
+    100% {text-shadow:-9px 4px 0px #00FFFF;}
+}</style>
 
  </head>
  <body>
@@ -45,14 +75,65 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
+   <div class="clearfix colelem" id="pu4929"><!-- group -->
+    <div class="size_fixed grpelem" id="u4929" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
+     
+<!-- This Adobe Muse widget was created by the team at MuseFree.com -->
+<p class="disco">This project is WIP</p>
+
+    </div>
+    <div class="clearfix grpelem" id="u4934-3"><!-- content -->
+     <p>&nbsp;</p>
+    </div>
+   </div>
    <div class="clearfix colelem" id="u2101-3"><!-- content -->
     <p>&nbsp;</p>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="204" data-content-below-spacer="295" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="colelem" id="u4922"><!-- custom html -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/2QJQA0pXABI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
+   <div class="clearfix colelem" id="ppu4940"><!-- group -->
+    <div class="clearfix grpelem" id="pu4940"><!-- column -->
+     <div class="clip_frame colelem" id="u4940"><!-- image -->
+      <img class="block" id="u4940_img" src="images/waterfall_sculpt.jpg?crc=246895625" data-hidpi-src="images/waterfall_sculpt_2x.jpg?crc=3978239155" alt="" data-heightwidthratio="0.6226415094339622" data-image-width="371" data-image-height="231"/>
+     </div>
+     <div class="clip_frame colelem" id="u4960"><!-- image -->
+      <img class="block" id="u4960_img" src="images/rendermushroomtexture.jpg?crc=4139386693" data-hidpi-src="images/rendermushroomtexture_2x.jpg?crc=8076050" alt="" data-heightwidthratio="0.5635179153094463" data-image-width="307" data-image-height="173"/>
+     </div>
+     <div class="clip_frame colelem" id="u5000"><!-- image -->
+      <img class="block" id="u5000_img" src="images/dragonflyrendercolor.jpg?crc=3781715613" data-hidpi-src="images/dragonflyrendercolor_2x.jpg?crc=3895922332" alt="" data-heightwidthratio="0.562992125984252" data-image-width="254" data-image-height="143"/>
+     </div>
+    </div>
+    <div class="clearfix grpelem" id="pu4950"><!-- column -->
+     <div class="clip_frame colelem" id="u4950"><!-- image -->
+      <img class="block" id="u4950_img" src="images/waterfall_textured.jpg?crc=268516876" data-hidpi-src="images/waterfall_textured_2x.jpg?crc=4152046419" alt="" data-heightwidthratio="1.2706766917293233" data-image-width="266" data-image-height="338"/>
+     </div>
+     <div class="clip_frame colelem" id="u4980"><!-- image -->
+      <img class="block" id="u4980_img" src="images/millipede.jpg?crc=249977207" data-hidpi-src="images/millipede_2x.jpg?crc=96242747" alt="" data-heightwidthratio="0.9210526315789473" data-image-width="228" data-image-height="210"/>
+     </div>
+    </div>
+   </div>
+   <div class="clearfix colelem" id="pu4990"><!-- group -->
+    <div class="clip_frame grpelem" id="u4990"><!-- image -->
+     <img class="block" id="u4990_img" src="images/ice%20rendered.jpg?crc=4019099394" data-hidpi-src="images/ice%20rendered_2x.jpg?crc=437223986" alt="" data-heightwidthratio="0.5629820051413882" data-image-width="389" data-image-height="219"/>
+    </div>
+    <div class="clip_frame grpelem" id="u4970"><!-- image -->
+     <img class="block" id="u4970_img" src="images/bulldozerrendertextured_web.jpg?crc=127763010" data-hidpi-src="images/bulldozerrendertextured_web_2x.jpg?crc=3805232882" alt="" data-heightwidthratio="0.5277108433734939" data-image-width="415" data-image-height="219"/>
+    </div>
+   </div>
+   <div class="clearfix colelem" id="pu5010"><!-- group -->
+    <div class="clip_frame grpelem" id="u5010"><!-- image -->
+     <img class="block" id="u5010_img" src="images/camptosaurus.jpg?crc=3992398400" data-hidpi-src="images/camptosaurus_2x.jpg?crc=160395175" alt="" data-heightwidthratio="0.5628415300546448" data-image-width="366" data-image-height="206"/>
+    </div>
+    <div class="clip_frame grpelem" id="u5020"><!-- image -->
+     <img class="block" id="u5020_img" src="images/brontosaurus.jpg?crc=44779730" data-hidpi-src="images/brontosaurus_2x.jpg?crc=3927108478" alt="" data-heightwidthratio="0.5626666666666666" data-image-width="375" data-image-height="211"/>
+    </div>
+   </div>
+   <div class="verticalspacer" data-offset-top="1685" data-content-above-spacer="1684" data-content-below-spacer="50" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
@@ -83,7 +164,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=128606099" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=3936894949" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
   
   <!--HTML Widget code-->
   
