--- a/critiquepage.html
+++ b/critiquepage.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4110669070"/>
-  <link rel="stylesheet" type="text/css" href="css/critiquepage.css?crc=14170797" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/critiquepage.css?crc=479474899" id="pagesheet"/>
     <!--HTML Widget code-->
   
   
@@ -57,18 +57,24 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p>&nbsp;</p>
     </div>
    </div>
-   <div class="clearfix colelem" id="u1793-9"><!-- content -->
-    <p id="u1793-2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This video is a lecture describing the various artworks of performance artist Stelarc. I believe that Stelarc’s work possesses value in its obscurity, creativity, and alternative perspective on various themes. In the context of the body appearance, he states through his artwork that our limbs and skin are able to exist in a different context as most desire; they can be enhanced in order to increase function, hinting the term cyborg in the title. He also reconstructs ideas of beauty in terms of body modifications and prosthetics. One way he displays this is by inserting a silicon ear in his arm, making it appear that Stelarc has an ear growing out of his arm. He presents prosthetics as an increase in functionality by creating a robotic arm that is able to write faster and possesses two sets of fingers. The main takeaway is that the physical, aesthetic, and functional purpose of the body is not necessarily better because it is normal. In the past, when creating prosthetic limbs, the most effective versions were seen as those that appeared the closest to in appearance to a real limb; now, humans are purposely trying to design prosthetic limbs to customize their appearance, to positively stand out as a human cyborg. While this concept is as fascinating as it is bizarre, I think Stelarc sometimes fails at getting his point across. In his speech, he goes on tangents about his various projects without explaining the purpose of either one. At first, his artwork may appear to be a randomly bizarre application of the arts to very advanced technology and engineering tasks. It was only after researching Stelarc, after I had watched the video, that I realized what his artwork was about. His pieces are eccentric, creative, outlandish, and confusing. For example, one of his pieces “Shadow Suspension” consists of various humans hanging from the ceiling attached by sharp hooks that are impaled into the subjects' bare naked skin. In another piece, Stelarc himself is suspended in the air above a statue, naked, while impaled by hooks. Although his work is fascinating, it can at first be confusing what he is trying to communicate by doing these things.</p>
-    <p id="u1793-3">&nbsp;</p>
-    <p id="u1793-5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; In my opinion, Stelarc has some great ideas and is good at thinking outside of the box, but his communication skills are lacking, even as he is talking. I think that if he were to collaborate with other artists who possessed the aspects he is not as successful with, there would be a potential for the creation of even greater artwork.</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
+   <div class="browser_width colelem" id="u4062-bw">
+    <div id="u4062"><!-- group -->
+     <div class="clearfix" id="u4062_align_to_page">
+      <div class="clearfix grpelem" id="u1793-9"><!-- content -->
+       <p id="u1793-2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This video is a lecture describing the various artworks of performance artist Stelarc. I believe that Stelarc’s work possesses value in its obscurity, creativity, and alternative perspective on various themes. In the context of the body appearance, he states through his artwork that our limbs and skin are able to exist in a different context as most desire; they can be enhanced in order to increase function, hinting the term cyborg in the title. He also reconstructs ideas of beauty in terms of body modifications and prosthetics. One way he displays this is by inserting a silicon ear in his arm, making it appear that Stelarc has an ear growing out of his arm. He presents prosthetics as an increase in functionality by creating a robotic arm that is able to write faster and possesses two sets of fingers. The main takeaway is that the physical, aesthetic, and functional purpose of the body is not necessarily better because it is normal. In the past, when creating prosthetic limbs, the most effective versions were seen as those that appeared the closest to in appearance to a real limb; now, humans are purposely trying to design prosthetic limbs to customize their appearance, to positively stand out as a human cyborg. While this concept is as fascinating as it is bizarre, I think Stelarc sometimes fails at getting his point across. In his speech, he goes on tangents about his various projects without explaining the purpose of either one. At first, his artwork may appear to be a randomly bizarre application of the arts to very advanced technology and engineering tasks. It was only after researching Stelarc, after I had watched the video, that I realized what his artwork was about. His pieces are eccentric, creative, outlandish, and confusing. For example, one of his pieces “Shadow Suspension” consists of various humans hanging from the ceiling attached by sharp hooks that are impaled into the subjects' bare naked skin. In another piece, Stelarc himself is suspended in the air above a statue, naked, while impaled by hooks. Although his work is fascinating, it can at first be confusing what he is trying to communicate by doing these things.</p>
+       <p id="u1793-3">&nbsp;</p>
+       <p id="u1793-5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; In my opinion, Stelarc has some great ideas and is good at thinking outside of the box, but his communication skills are lacking, even as he is talking. I think that if he were to collaborate with other artists who possessed the aspects he is not as successful with, there would be a potential for the creation of even greater artwork.</p>
+       <p>&nbsp;</p>
+       <p>&nbsp;</p>
+      </div>
+     </div>
+    </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1876" data-content-above-spacer="1876" data-content-below-spacer="155" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="2054" data-content-above-spacer="2054" data-content-below-spacer="0" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
@@ -99,7 +105,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=128606099" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=3936894949" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
   
   <!--HTML Widget code-->
   
