--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4110669070"/>
-  <link rel="stylesheet" type="text/css" href="css/projects.css?crc=355052725" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/projects.css?crc=45956458" id="pagesheet"/>
     <!--HTML Widget code-->
   
 
@@ -45,7 +45,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="clearfix colelem" id="pu2101-3"><!-- group -->
+   <div class="clearfix colelem" id="ppu5030-4"><!-- group -->
+    <div class="clearfix grpelem" id="pu5030-4"><!-- column -->
+     <a class="nonblock nontext clearfix colelem" id="u5030-4" href="animation-studio.html"><!-- content --><p>animation studio</p></a>
+     <a class="nonblock nontext clearfix colelem" id="u5033-4" href="bodylogical.html"><!-- content --><p>bodylogical</p></a>
+     <a class="nonblock nontext clearfix colelem" id="u5036-4" href="nicotine-simulation.html"><!-- content --><p>NTP</p></a>
+    </div>
     <div class="clearfix grpelem" id="u2101-3"><!-- content -->
      <p>&nbsp;</p>
     </div>
@@ -53,7 +58,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="museBGSize grpelem" id="u1524"><!-- simple frame --></div>
    </div>
    <div class="museBGSize colelem" id="u1542"><!-- simple frame --></div>
-   <div class="verticalspacer" data-offset-top="1142" data-content-above-spacer="1142" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="1142" data-content-above-spacer="1142" data-content-below-spacer="0" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/wastelandpsbuttoncombined-wasteland.jpg?crc=307861172" alt=""/>
@@ -65,7 +70,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
@@ -96,7 +101,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=128606099" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=3936894949" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
   
   <!--HTML Widget code-->
   
