--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4110669070"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=446311553" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=178800692" id="pagesheet"/>
     <!--HTML Widget code-->
   
 
@@ -26,7 +26,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 .gradient {
   width: 100%;
   height: 100vh;
-  background-image: radial-gradient(at 300px 300px, rgba(115,160,255,.9) 0, #000000 70%);
+  background-image: radial-gradient(at 300px 300px, rgba(115,160,255,.9) 0, #FF00FF 40%);
 }
 
 </style>
@@ -82,14 +82,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p>&nbsp;</p>
      <p>&nbsp;</p>
     </div>
-    <a class="nonblock nontext grow clip_frame grpelem" id="u2083" href="https://qi.ucsd.edu/research-services/visualization.php"><!-- image --><img class="block" id="u2083_img" src="images/color-logo-01_2x.png?crc=4146615316" alt="" data-heightwidthratio="0.38114754098360654" data-image-width="244" data-image-height="93"/></a>
-    <a class="nonblock nontext grow clip_frame grpelem" id="u2085" href="https://www.youtube.com/watch?v=rHJcJqsj1Wc"><!-- image --><img class="block" id="u2085_img" src="images/txrlogo.png?crc=535545514" alt="" data-heightwidthratio="1" data-image-width="146" data-image-height="146"/></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u2083" href="https://qi.ucsd.edu/research-services/visualization.php"><!-- image --><img class="block" id="u2083_img" src="images/color-logo-01_2x.png?crc=4146615316" alt="" data-heightwidthratio="0.38114754098360654" data-image-width="244" data-image-height="93"/></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u2085" href="https://www.youtube.com/watch?v=rHJcJqsj1Wc"><!-- image --><img class="block" id="u2085_img" src="images/txrlogo.png?crc=535545514" alt="" data-heightwidthratio="1" data-image-width="146" data-image-height="146"/></a>
    </div>
-   <div class="verticalspacer" data-offset-top="918" data-content-above-spacer="917" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="918" data-content-above-spacer="917" data-content-below-spacer="0" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
@@ -120,7 +120,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=128606099" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=3936894949" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
   
   <!--HTML Widget code-->
   
@@ -132,7 +132,7 @@ var TM=window.TM||{};TM.sliceWidth=1,TM.amplitude=3,TM.frequency=100,TM.amplitud
 var gradient = document.querySelector(".gradient");
 
 function onMouseMove(event) {
-  gradient.style.backgroundImage = 'radial-gradient(at ' + event.clientX + 'px ' + event.clientY + 'px, rgba(115,160,255,.9) 0, #000000 70%)';
+  gradient.style.backgroundImage = 'radial-gradient(at ' + event.clientX + 'px ' + event.clientY + 'px, rgba(115,160,255,.9) 0, #FF00FF 40%)';
 
   TweenMax.set(gradient, {
     backgroundImage: "radial-gradient(circle," + colors.top + ", " + colors.bottom + ")"
