--- a/work.html
+++ b/work.html
@@ -108,7 +108,7 @@ opacity: 0; -moz-transition-property: all; -o-transition-property: all; -webkit-
     <div class="browser_width colelem" id="u1937-bw">
      <div id="u1937"><!-- group -->
       <div class="clearfix" id="u1937_align_to_page">
-       <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="images/sb_icon.gif?crc=4191900242" data-hidpi-src="images/sb_icon_2x.gif?crc=4191900242" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
+       <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="https://github.com/sophiaboss11/sophiaboss11.github.io/blob/master/images/Gifs/sb_icon.gif" data-hidpi-src="https://github.com/sophiaboss11/sophiaboss11.github.io/blob/master/images/Gifs/sb_icon.gif" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
        <div class="clearfix grpelem" id="pu2265"><!-- group -->
         <div class="size_fixed grpelem" id="u2265" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
          
@@ -156,14 +156,14 @@ opacity: 0; -moz-transition-property: all; -o-transition-property: all; -webkit-
      <a class="nonblock nontext size_fluid_width grpelem" id="u2250" href="design.html" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 	     <div class="u2250">
-<img src="assets/moshed-2020-6-13-20-58-53.gif"/><span class="name">Design<span class="title">graphics, posters, and layouts</span></span>
+<img src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/MOSHED-2020-6-13-20-58-53.gif"/><span class="name">Design<span class="title">graphics, posters, and layouts</span></span>
 </div>
 
 </a>
      <a class="nonblock nontext size_fluid_width grpelem" id="u2255" href="projects.html" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 	     <div class="u2255">
-<img src="assets/load.gif"/><span class="name">Projects<span class="title"> various projects from university</span></span>
+<img src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/load.gif"/><span class="name">Projects<span class="title"> various projects from university</span></span>
 </div>
 
 </a>
